--- a/module1/src/css/style.css
+++ b/module1/src/css/style.css
@@ -1,6 +1,8 @@
 @import url(https://fonts.googleapis.com/css?family=Ubuntu:300,300italic,regular,italic,500,500italic,700,700italic&display=swap);
-
+/* Не подключен normalize */
 * {
+   /* это излишний сброс, это делает normalize */
+   /* если 0, то без px */
    padding: 0px;
    margin: 0px;
    border: 0px;
@@ -18,6 +20,7 @@ body {
 body {
    color: #4b5d68;
    line-height: 1;
+   /* не подключены безопасные шрифты, так же нет дефлотных font-size, font-weight, line-height */
    font-family: "Ubuntu";
 }
 input,
@@ -62,6 +65,7 @@ h6 {
    flex-direction: column;
    overflow: hidden;
 }
+/* зачем по тегу? есть класс page */
 .wrapper > main {
    flex: 1 1 auto;
 }
@@ -74,6 +78,7 @@ h6 {
    margin: 0 auto;
    padding: 0 15px;
 }
+/* пустой класс */
 .header__container {
 }
 .header__top {
@@ -90,6 +95,7 @@ h6 {
 .icon-menu {
    display: none;
 }
+/* вся медиа всегда в самом низу */
 @media (max-width: 425px) {
    .header__top {
       column-gap: normal;
@@ -135,6 +141,7 @@ h6 {
    .icon-menu::after {
       bottom: 0;
    }
+   /* rem не практично */
    .icon-menu span {
       top: calc(50% - 0.0625rem);
    }
@@ -150,6 +157,7 @@ h6 {
       transform: rotate(45deg);
    }
 }
+/* пустые классы?! */
 .menu {
 }
 .menu__icon {
@@ -172,6 +180,7 @@ h6 {
 }
 .menu__link:hover {
    font-weight: 800;
+   /* Цвета не вынесены в переменные */
    color: #212353;
 }
 .header__body {
